Security: Add .env to gitignore and configure safe web deployment with public Spotify Client ID only

--- a/.gitignore
+++ b/.gitignore
@@ -74,5 +74,10 @@ app.*.map.json
 
 # Web related
 
+# Environment variables - NEVER COMMIT API KEYS!
+.env
+.env.local
+.env.*.local
+
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
