--- a/backend-proxy-example/package.json
+++ b/backend-proxy-example/package.json
@@ -8,6 +8,7 @@
     "deploy": "vercel --prod"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "form-data": "^4.0.0"
   }
 }
